unpackaged/main/default/objects/ccpe_ocp__Cloudcoach_Project__c/ccpe_ocp__Cloudcoach_Project__c.object-meta.xml
<CustomObject>
    <label>Cloud Coach Project (Deprecated)</label>
    <nameField>
        <displayFormat>CCP-{0}</displayFormat>
        <label>Cloud Coach Project Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cloud Coach Projects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>