unpackaged/main/default/objects/ccpe_ocp__Cloudcoach_Project__c/fields/ccpe_ocp__Account__c.field-meta.xml
<CustomField>
    <fullName>ccpe_ocp__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Cloudcoach_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>