unpackaged/main/default/objects/ccpe_ocp__Cloudcoach_Project__c/fields/ccpe_ocp__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>ccpe_ocp__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Cloudcoach_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>