unpackaged/main/default/objects/ccpe_ocp__Cloudcoach_Project__c/fields/ccpe_ocp__Project__c.field-meta.xml
<CustomField>
    <fullName>ccpe_ocp__Project__c</fullName>
    <label>Project</label>
    <referenceTo>project_cloud__Project__c</referenceTo>
    <relationshipName>Cloudcoach_Projects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>