unpackaged/main/default/objects/ccpe_ocp__Cloudcoach_Project__c/fields/ccpe_ocp__Project_Owner__c.field-meta.xml
<CustomField>
    <fullName>ccpe_ocp__Project_Owner__c</fullName>
    <formula>ccpe_ocp__Project__r.Owner:User.FirstName  &amp; &#39; &#39; &amp; ccpe_ocp__Project__r.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Owner</label>
    <type>Text</type>
</CustomField>