unpackaged/main/default/objects/ccpe_ocp__Cloudcoach_Project__c/fields/ccpe_ocp__Project_Status__c.field-meta.xml
<CustomField>
    <fullName>ccpe_ocp__Project_Status__c</fullName>
    <formula>ccpe_ocp__Project__r.project_cloud__Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Status</label>
    <type>Text</type>
</CustomField>